feat(): добавлена окраска тикетов по приоритету

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         createprojectdialog.h
         createprojectdialog.ui
         storagemanager.h storagemanager.cpp
+        prioritydelegate.h prioritydelegate.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET TicketSystem APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
