--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         createprojectdialog.ui
         storagemanager.h storagemanager.cpp
         prioritydelegate.h prioritydelegate.cpp
+        addemployeedialog.h addemployeedialog.cpp
+        profiletab.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET TicketSystem APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
